--- a/postgres_docker_init/docker-compose.yml
+++ b/postgres_docker_init/docker-compose.yml
@@ -10,6 +10,6 @@ services:
     ports:
       - "5434:5432"
     volumes:
-      - ./pg_data:/var/lib/postgresql/data
+      - ./pg_data_new:/var/lib/postgresql/data
       - ./data:/data
       - ./infra_setup/init.sql:/docker-entrypoint-initdb.d/init.sql
