--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ jupyterlab_git==0.50.0
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.4
 kiwisolver==1.4.5
+logging==0.4.9.6
 MarkupSafe==2.1.5
 matplotlib==3.8.3
 matplotlib-inline==0.1.6
@@ -94,12 +95,14 @@ plotly==5.20.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
+psycopg2==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.22
 Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.1
 PyYAML==6.0.1
