--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Babel==2.14.0
 beautifulsoup4==4.12.3
 black==24.4.2
 bleach==6.1.0
+cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -29,6 +30,13 @@ fqdn==1.5.1
 fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.43
+google-api-core==2.19.0
+google-auth==2.29.0
+google-cloud-core==2.4.1
+google-cloud-storage==2.16.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
+googleapis-common-protos==1.63.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -94,10 +102,14 @@ platformdirs==4.2.0
 plotly==5.20.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
+proto-plus==1.23.0
+protobuf==4.25.3
 psutil==5.9.8
 psycopg2==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 Pygments==2.17.2
 pyparsing==3.1.2
@@ -112,6 +124,7 @@ requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.18.0
+rsa==4.9
 scikit-learn==1.4.1.post1
 scipy==1.13.0
 seaborn==0.13.2
