--- a/requirements.txt
+++ b/requirements.txt
@@ -32,11 +32,14 @@ gitdb==4.0.11
 GitPython==3.1.43
 google-api-core==2.19.0
 google-auth==2.29.0
+google-cloud-bigquery==3.23.1
 google-cloud-core==2.4.1
 google-cloud-storage==2.16.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
+grpcio==1.64.0
+grpcio-status==1.62.2
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
