fix issues with init sql script

--- a/05_capstone_project/docker-compose.yml
+++ b/05_capstone_project/docker-compose.yml
@@ -10,6 +10,6 @@ services:
     ports:
       - "5434:5432"
     volumes:
-      - ./pg_data:/var/lib/postgresql/data
+      - ./pg_data_19:/var/lib/postgresql/data
       - ./data:/data
       - ./infra_setup/init.sql:/docker-entrypoint-initdb.d/init.sql
