exclude pg_data from git

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,15 @@ gc
 
 gcs.py
 
+pg_data_0
+pg_data_1
+pg_data_2
+pg_data_3
+pg_data_4
+pg_data_5
+pg_data_6
+pg_data_7
+pg_data_8
+pg_data_9
+pg_data_19
 
-**./pg_data/
