--- a/05_capstone_project/dbt/capstone_ecommerce_dbt/models/sources/olist_ecommerce/orders/_orders_models.yml
+++ b/05_capstone_project/dbt/capstone_ecommerce_dbt/models/sources/olist_ecommerce/orders/_orders_models.yml
@@ -3,6 +3,24 @@ version: 2
 models:
   - name: stg_orders
     description: maps 1-1 with source orders table 
+    columns:
+      - name: order_id
+        description: unique identifier of an order.
+      - name: customer_order_id
+        description: key to the customer dataset. Each order has a unique customer_id.
+      - name: order_status
+        description: Reference to the order status (delivered, shipped, etc).
+      - name: order_purchase_timestamp
+        description: Shows the purchase timestamp.
+      - name: order_approved_at
+        description: Shows the payment approval timestamp.
+      - name: order_delivered_carrier_date
+        description: Shows the order posting timestamp. When it was handled to the logistic partner.
+      - name: order_delivered_customer_date
+        description: Shows the actual order delivery date to the customer.
+      - name: order_estimated_delivery_date
+        description: Shows the estimated delivery date that was informed to customer at the purchase moment.
+       
   - name: stg_order_items
     description: maps 1-1 with source order items table 
   - name: stg_order_payments
